<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.2.0</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>org.gentar</groupId>
	<artifactId>core</artifactId>
	<version>0.0.3-SNAPSHOT</version>
	<name>core</name>
	<description>Demo project for Spring Boot</description>

	<properties>
		<java.version>21</java.version>
		<equalsverifier.version>3.10</equalsverifier.version>

		<jacoco.plugin.version>0.8.11</jacoco.plugin.version>
		<skip.coverage>false</skip.coverage>

		<coverage.ratio.instruction>0.5400</coverage.ratio.instruction>
		<coverage.ratio.branch>0.4300</coverage.ratio.branch>
		<coverage.ratio.method>0.5000</coverage.ratio.method>
		<coverage.ratio.complexity>0.4300</coverage.ratio.complexity>
		<coverage.ratio.line>0.5700</coverage.ratio.line>
		<coverage.ratio.class>0.4300</coverage.ratio.class>

	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-rest</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-hateoas</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-cache</artifactId>
		</dependency>

		<!-- Additional dependencies-->
		<!--*******************************************************-->

		<!-- Lombok-->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>

		<!-- Managing csv files -->
		<dependency>
			<groupId>com.opencsv</groupId>
			<artifactId>opencsv</artifactId>
			<version>4.5</version>
		</dependency>

		<!-- Databases -->
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>

		<!-- Database in memory -->
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- Testing DB-->
		<!-- https://mvnrepository.com/artifact/org.dbunit/dbunit -->
		<dependency>
			<groupId>org.dbunit</groupId>
			<artifactId>dbunit</artifactId>
			<version>2.6.0</version>
			<scope>test</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.github.springtestdbunit/spring-test-dbunit -->
		<dependency>
			<groupId>com.github.springtestdbunit</groupId>
			<artifactId>spring-test-dbunit</artifactId>
			<version>1.3.0</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.httpcomponents.client5</groupId>
			<artifactId>httpclient5</artifactId>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.json/json -->
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20200518</version>
		</dependency>

		<!-- A dependency to to asserts in jsons -->
<!--		<dependency>-->
<!--			<groupId>org.skyscreamer</groupId>-->
<!--			<artifactId>jsonassert</artifactId>-->
<!--			<version>1.5.0</version>-->
<!--		</dependency>-->


		<!-- Auditing -->
		<dependency>
			<groupId>org.hibernate.orm</groupId>
			<artifactId>hibernate-envers</artifactId>
			<version>6.1.6.Final</version>
		</dependency>

		<!-- validation of beans -->
		<dependency>
			<groupId>javax.validation</groupId>
			<artifactId>validation-api</artifactId>
			<version>2.0.0.Final</version>
		</dependency>

		<!--Utilities to help auditing changes in objects-->
		<!-- https://mvnrepository.com/artifact/commons-beanutils/commons-beanutils -->
		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils</artifactId>
			<version>1.9.4</version>
		</dependency>

		<!-- Generate jpa models-->
		<dependency>
			<groupId>org.hibernate.orm</groupId>
			<artifactId>hibernate-jpamodelgen</artifactId>
			<version>6.1.6.Final</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-jsr310</artifactId>
		</dependency>

		<!-- Manipulate json (abac policies)-->
		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
			<version>2.3.0</version>
		</dependency>

		<dependency>
			<groupId>javax.activation</groupId>
			<artifactId>javax.activation-api</artifactId>
			<version>1.2.0</version>
		</dependency>


		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-junit-jupiter -->
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<version>2.23.0</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.junit.vintage</groupId>
					<artifactId>junit-vintage-engine</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.vaadin.external.google</groupId>
					<artifactId>android-json</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.gentar</groupId>
			<artifactId>dto</artifactId>
			<version>0.0.3-SNAPSHOT</version>
			<scope>compile</scope>
		</dependency>
        <dependency>
            <groupId>org.biojava</groupId>
            <artifactId>core</artifactId>
            <version>1.9.4</version>
            <scope>compile</scope>
        </dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco.plugin.version}</version>
				<configuration>
					<dataFile>${project.build.directory}/coverage-reports/jacoco.exec</dataFile>
					<outputDirectory>${project.build.directory}/coverage-reports/</outputDirectory>
					<skip>true</skip>
					<excludes>
						<exclude>**/*Config.*</exclude>
						<exclude>**/*ConfigProd.*</exclude>
						<exclude>**/*Application.*</exclude>
						<exclude>**/*ConfigDev.*</exclude>
						<exclude>**/*ConfigNonDev.*</exclude>
						<exclude>**/*Constants.*</exclude>
						<exclude>**/*Properties.*</exclude>
						<exclude>**/*Exception.*</exclude>
						<exclude>**/*Serializer.*</exclude>
						<exclude>**/*Deserializer.*</exclude>
						<exclude>**/constants/**/*</exclude>
						<exclude>**/constants/*.*</exclude>
						<exclude>**/*Advice.*</exclude>
					</excludes>
				</configuration>
				<executions>
					<execution>
						<id>prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
						<configuration>
							<skip>${skip.coverage}</skip>
							<destFile>${project.build.directory}/coverage-reports/jacoco.exec</destFile>
						</configuration>
					</execution>
					<execution>
						<id>report</id>
						<!-- Run before maven-scr-plugin adds in the service methods -->
						<phase>integration-test</phase>
						<goals>
							<goal>report</goal>
						</goals>
						<configuration>
							<skip>${skip.coverage}</skip>
						</configuration>
					</execution>
					<execution>
						<id>check</id>
						<!-- Run before maven-scr-plugin adds in the service methods -->
						<phase>integration-test</phase>
						<goals>
							<goal>check</goal>
						</goals>
						<configuration>
							<skip>${skip.coverage}</skip>
							<rules>
								<rule>
									<element>BUNDLE</element>
									<limits>
										<limit>
											<counter>INSTRUCTION</counter>
											<value>COVEREDRATIO</value>
											<minimum>${coverage.ratio.instruction}</minimum>
										</limit>
										<limit>
											<counter>LINE</counter>
											<value>COVEREDRATIO</value>
											<minimum>${coverage.ratio.line}</minimum>
										</limit>
										<limit>
											<counter>BRANCH</counter>
											<value>COVEREDRATIO</value>
											<minimum>${coverage.ratio.branch}</minimum>
										</limit>
										<limit>
											<counter>METHOD</counter>
											<value>COVEREDRATIO</value>
											<minimum>${coverage.ratio.method}</minimum>
										</limit>
										<limit>
											<counter>CLASS</counter>
											<value>COVEREDRATIO</value>
											<minimum>${coverage.ratio.class}</minimum>
										</limit>
										<limit>
											<counter>COMPLEXITY</counter>
											<value>COVEREDRATIO</value>
											<minimum>${coverage.ratio.complexity}</minimum>
										</limit>
									</limits>
								</rule>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
